external-crates/move/crates/move-compiler/tests/move_check/parser/struct_type_misspelled_key_constraint.move
module 0x42::M {
    // Check misspelling of "key" constraint.
    struct S<T: ky> { }
}
